css/site.scss
---
---

@import "../_sass/variables";
@import "../_sass/bootstrap";
@import "../_sass/font-awesome";

html {
    position: relative;
    min-height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.content {
    flex: 1 0 auto;
    max-width: 100%;
}

footer {
    margin-top: 20px;
    padding: 35px 0;
    background-color: #3f3e51;
    width: 100%;
    color: #AAA;

    a {
        color: white;

        &:active,
        &:hover {
            color: white;
        }

        i {
            color: #3f3e51;
        }
    }

    @media(max-width: 767px) {
        padding: 20px 0;
    }
}

nav {
    @media (min-width: $grid-float-breakpoint) {
        padding: 18px 0 5px 0;
    }

    &.navbar-default {
        background: white;
        border: none;
    }

    &.navbar {
        @media(max-width: $grid-float-breakpoint) {
            margin: 0;
        }
    }

    ul {
        & > li {
            & > a {
                @media (min-width: $grid-float-breakpoint) {
                    border-radius: 4px;
                }
            }
        }
    }
    .tickets {
        display: inline-block;
        min-width: 86px;
    }
}

.jumbotron {
    background-image: url(/img/stones.jpg);
    background-size: cover;
    background-position: center center;
    color: white;
    text-align: center;
    padding: 80px 0;

    h1 {
        margin: 0;
        text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
        font-size: 5em;

        @media(max-width: 767px) {
            font-size: 3em;
        }

        @media(max-width: 320px) {
            font-size: 2em;
        }
    }

    h2,
    h3 {
        text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
    }
}

.intro-divider {
    max-width: 400px;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}

#ticket-widget-homepage .tito-wrapper {
    background-color: white;
}

#ticket-button-nav button {
    @extend .btn;
    @extend .btn-primary;
    margin-left: 15px;
    margin-top: 8px;
}

#sponsors-bar {

    margin-bottom: 10px;

    .row {
        margin: 0;
    }

    a {
        text-decoration: none;
    }

    img {
        max-height: 60px;
        background: white;
        padding: 8px;
        border-radius: 5px;
        margin-bottom: 20px;
    }

    a {
        margin-right: 20px;
    }
}

.flex-row {
    display: flex;
    flex-wrap: wrap;
}
.flex-row > [class*='col-'] {
    display: flex;
    flex-direction: column;
}

.flex-row .thumbnail,
.flex-row .caption {
    flex-direction: column;
    display: flex;
    flex: 1 0 auto;
    height: auto;
    position: relative;
}
.flex-text {
    flex-grow: 1;
}
.flex-row img {
    min-width: 0;
    width: 100%;
}

@import "../_sass/pages";
@import "../_sass/posts";

